--- a/jevelin-completed/index.html
+++ b/jevelin-completed/index.html
@@ -73,7 +73,7 @@
             <a href="#" class="cta">Buy now</a>
           </div>
           <div class="watch-wrapper">
-            <img src="images/coding.svg" alt="" />
+            <img src="images/watch.png" alt="" />
           </div>
         </div>
       </div>
